fl#valid_tests/tests/invalid/itm.tpa
DEFINE_ACTION_FUNCTION fl#valid_tests#tests#invalid#itm
  RET
    success
    fail
BEGIN
  OUTER_SPRINT file_root "%MOD_FOLDER%/tests/invalid/itm"

  ACTION_DEFINE_ASSOCIATIVE_ARRAY invalid#itm BEGIN
    "nosig" => "Plain ITM V1 with erased signature"
    "nover" => "Plain ITM V1 with erased version"
    "itmv10" => "Plain ITM with incorrect V1.0 version"
    "dmghd" => "Plain ITM V1 with 0x20 bytes deleted at offset 0x10"
    "0off" => "Plain ITM V1 with zeroed ability offset"
  END

  ACTION_PHP_EACH invalid#itm AS file => desc BEGIN
    LAF test_invalid STR_VAR file = EVAL "%file_root%/%file%.itm" desc RET success fail END
  END
END

LAF fl#valid_tests#tests#invalid#itm RET success fail END
